--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       bottom: 10px;
       right: 10px;
       font-size: 14px;
-      color: #06AA48;
+      color: white;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0" width="600" height="600"></iframe>
+    <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="1" width="500" height="500"></iframe>
     <div class="footer">
       made with ❤️ by gabe
     </div>
