--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      height: 400px;
+      width: 400px;
     }
     iframe {
       width: 100%;
@@ -41,7 +42,7 @@
 </head>
 <body>
   <div class="container">
-    <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="1" width="500" height="500"></iframe>
+    <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0" width="500" height="500"></iframe>
     <div class="footer">
       made with ❤️ by gabe
     </div>
