--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
-      background-color: #1C2333;
+      background-color: white;
     }
     .container {
       display: flex;
