--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       align-items: center;
       height: 100%;
       width: 100%;
+      overflow: hidden;
+      position: relative;
     }
     iframe {
       max-width: 100%;
       max-height: 90%;
       width: 650px;
       height: 600px;
-      border-radius: 10px; /* Arredonda os cantos */
+      border-radius: 10px;
     }
     .footer {
       position: absolute;
@@ -41,10 +43,63 @@
       font-size: 13px;
       color: #06AA48;
     }
+    .hamburger-icon {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      font-size: 24px;
+      color: white;
+      cursor: pointer;
+      background: transparent;
+      border-radius: 50%;
+      padding: 8px;
+      transition: background-color 0.3s ease;
+    }
+    .hamburger-icon:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+    .sidebar {
+      position: absolute;
+      top: 0;
+      width: 200px;
+      height: 100%;
+      background-color: #1C2333;
+      transition: left 0.3s ease;
+      padding: 15px;
+      z-index: 2;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .sidebar ul li {
+      font-size: 18px;
+      color: white;
+      padding: 10px 0;
+    }
   </style>
+  <script>
+    function toggleSidebar() {
+      var sidebar = document.getElementById('sidebar');
+      if (sidebar.style.left === "-300px") {
+        sidebar.style.left = "0px";
+      } else {
+        sidebar.style.left = "-200px";
+      }
+    }
+  </script>
 </head>
 <body>
   <div class="container">
+    <div class="hamburger-icon" onclick="toggleSidebar()">&#9776;</div>
+    <div id="sidebar" class="sidebar" style="left: -300px;">
+      <ul>
+        <li>Home</li>
+        <li>Quem somos?</li>
+        <li>Sobre</li>
+      </ul>
+    </div>
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0"></iframe>
     <div class="footer">
       made with ❤️ and 🥤 by gabe.
