--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       transition: background-color 0.3s ease;
     }
     .hamburger-icon:hover {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba(255, 255, 255, 0.4);
     }
     .sidebar {
       position: absolute;
@@ -102,7 +102,7 @@
     </div>
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0"></iframe>
     <div class="footer">
-      made with ❤️ and 🥤 by gabe.
+      made with ❤️ and 🥤 by gabe
     </div>
     <div class="copyright">
       © 2023 Joinville BRA, Inc All rights reserved
