--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       max-height: 90%;
       width: 650px;
       height: 600px;
-      border-radius: 10px;
+      border-radius: 15px;
     }
     .footer {
       position: absolute;
@@ -102,7 +102,7 @@
     </div>
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0"></iframe>
     <div class="footer">
-      made with ❤️ and 🥤 by gabe
+      made with ❤️ and 🥤 by gabe.
     </div>
     <div class="copyright">
       © 2023 Joinville BRA, Inc All rights reserved
