--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0"></iframe>
     <div class="footer">
-      made with ❤️ and 🥤 by gabe.
+      made with ❤️ by gabe.
     </div>
     <div class="copyright">
       © 2023 Joinville BRA, Inc All rights reserved
