--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindReader(github snapshot) • O Adivinhador de Times</title>
+  <title>MindReader • O Adivinhador de Times</title>
+  <link rel="icon" href="icon.png" type="image/png">
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom right, #06AA48, white);
+      /*background: linear-gradient(to bottom right, #06AA48, white);*/
+	  background: linear-gradient(to bottom right, #06AA48 60%, #ffffff);
     }
     .container {
       display: flex;
@@ -112,7 +114,7 @@
     <div id="overlay" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:1;"></div>
     <div id="sidebar" class="sidebar" style="left: -300px;z-index:2;">
       <ul>
-        <li>Home</li>
+        <li><a href="home.html" style="color: white; text-decoration: none;">Home</a></li>
         <li>Quem somos?</li>
         <li>Sobre</li>
       </ul>
