--- a/Sobre.html
+++ b/Sobre.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MindReader • Sobre</title>
+  <link rel="icon" href="icon.png" type="image/png">
   <style>
     html, body {
       margin: 0;
@@ -36,28 +37,105 @@
       position: absolute;
       bottom: 10px;
       left: 10px;
-      font-size: 14px;
+      font-size: 13px;
       color: white;
     }
     .copyright {
       position: absolute;
       bottom: 10px;
       right: 10px;
-      font-size: 14px;
+      font-size: 13px;
       color: #06AA48;
     }
+    .hamburger-icon {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      font-size: 24px;
+      color: white;
+      cursor: pointer;
+      background: transparent;
+      border-radius: 50%;
+      padding: 8px;
+      transition: background-color 0.3s ease;
+    }
+    .hamburger-icon:hover {
+      background-color: rgba(255, 255, 255, 0.4);
+    }
+    .sidebar {
+      position: absolute;
+      top: 0;
+      width: 200px;
+      height: 100%;
+      background-color: #1C2333;
+      transition: left 0.3s ease;
+      padding: 15px;
+      z-index: 2;
+    }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .sidebar ul li {
+      font-size: 18px;
+      color: white;
+      padding: 10px 0;
+    }
   </style>
+  <script>
+    function toggleSidebar() {
+      var sidebar = document.getElementById('sidebar');
+      var overlay = document.getElementById('overlay');
+
+      if (sidebar.style.left === "-300px") {
+        sidebar.style.left = "0px";
+        overlay.style.display = "block";
+      } else {
+        sidebar.style.left = "-300px";
+        overlay.style.display = "none";
+      }
+    }
+
+    function closeSidebarOnClickOutside(event) {
+      var sidebar = document.getElementById('sidebar');
+      var overlay = document.getElementById('overlay');
+
+      if (event.target === overlay) {
+        sidebar.style.left = "-300px";
+        overlay.style.display = "none";
+      }
+    }
+
+    document.addEventListener('click', closeSidebarOnClickOutside);
+  </script>
 </head>
 <body>
   <div class="container">
-    <h1>Sobre a MindReader</h1>
-    <p>A MindReader é uma inteligência artificial desenvolvida por alunos da Univille com o objetivo de adivinhar o time de futebol brasileiro em que você torce ou está pensando. Nossa equipe de desenvolvedores trabalhou duro para criar uma IA capaz de realizar essa tarefa com precisão e rapidez.</p>
-    <div class="footer">
-      made with ❤️ by gabe.
+    <div class="hamburger-icon" onclick="toggleSidebar()">&#9776;</div>
+    <div id="overlay" style="display:none;position:fixed;top:0;left:0;width:100%;height:100%;z-index:1;">
     </div>
-    <div class="copyright">
-      © 2023 Joinville BRA, Inc All rights reserved
+    <div id="sidebar" class="sidebar" style="left: -300px;z-index:2;">
+    <ul>
+      <li><a href="home.html" style="color: white; text-decoration: none;">Home</a></li>
+      <li>Quem somos?</li>
+      <li>Sobre</li>
+    </ul>
     </div>
-  </div>
-</body>
-</html>
+      <h1>Sobre o MindReader</h1>
+      <p>Estamos orgulhosos de apresentar o MindReader, um projeto desenvolvido por alunos da Univille. A inteligência artificial é capaz de adivinhar qual é o seu time de futebol brasileiro favorito. O objetivo deste projeto é demonstrar o poder e as possibilidades da inteligência artificial e do aprendizado de máquina aplicados ao mundo do esporte e entretenimento, nele nós colocamos características dos times como cores, mascotes, estádios, jogares e titulos para que o jogador possa responder as respostas com sim ou não</p>
+      <h1>Como utilizar ?</h1>
+      <p>1.</p>
+      <p>2.</p>
+      <p>3.</p>
+      <p>4.</p>
+      
+      <div class="footer">
+    made with ❤️ by gabe.
+      </div>
+      <div class="copyright">
+    © 2023 Joinville BRA, Inc All rights reserved
+      </div>
+    </div>
+    </body>
+    </html>
