--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <ul>
         <li><a href="home.html" style="color: white; text-decoration: none;">Home</a></li>
         <li>Quem somos?</li>
-        <li>Sobre</li>
+        <li><a href="Sobre.html" style="color: white; text-decoration: none;">Sobre</a></li>
       </ul>
     </div>
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true" frameborder="0"></iframe>
