--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #24292e;
+      background-color:#1C2333;
       padding: 30px;
       width: 500px;
       height: 500px;
@@ -94,7 +94,7 @@
 <body>
   <div class="container">
     <a href="index.html" class="menu-item">Jogar</a>
-    <a href="#" class="menu-item">Sobre</a>
+    <a href="Sobre.html" class="menu-item">Sobre</a>
     <a href="#" class="menu-item">Contato</a>
   </div>
   <div class="notification">
