--- a/Sobre.html
+++ b/Sobre.html
@@ -119,7 +119,7 @@
     <ul>
       <li><a href="home.html" style="color: white; text-decoration: none;">Home</a></li>
       <li>Quem somos?</li>
-      <li>Sobre</li>
+      <li><a href="Sobre.html" style="color: white; text-decoration: none;">Sobre</a></li>
     </ul>
     </div>
       <h1>Sobre o MindReader</h1>
