--- a/home.html
+++ b/home.html
@@ -96,7 +96,7 @@
     <div class="hamburger-icon" onclick="toggleSidebar()">&#9776;</div>
     <div id="sidebar" class="sidebar" style="display:none;">
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li>Quem somos?</li>
         <li><a href="Sobre.html">Sobre</a></li>
       </ul>
