--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="index.html" class="menu-item">Jogar</a>
+    <a href="home.html" class="menu-item">Jogar</a>
     <a href="Sobre.html" class="menu-item">Sobre</a>
     <a href="#" class="menu-item">Contato </a>
   </div>
