--- a/Sobre.html
+++ b/Sobre.html
@@ -102,6 +102,9 @@
       color: white;
       display: block;
     }
+    ul li {
+      color: #ffffff; /* Adicionando a cor branca aos itens dentro da tag <ul> */
+    }
   </style>
   <script>
     function toggleSidebar() {
@@ -128,10 +131,19 @@
     <h1>Sobre o MindReader</h1>
     <p>Estamos orgulhosos de apresentar o MindReader, um projeto desenvolvido por alunos da Univille. A inteligência artificial é capaz de adivinhar qual é o seu time de futebol brasileiro favorito. O objetivo deste projeto é demonstrar o poder e as possibilidades da inteligência artificial e do aprendizado de máquina aplicados ao mundo do esporte e entretenimento, nele nós colocamos características dos times como cores, mascotes, estádios, jogares e titulos para que o jogador possa responder as respostas com sim ou não</p>
     <h1>Como utilizar ?</h1>
-    <p>1.</p>
-    <p>2.</p>
-    <p>3.</p>
-    <p>4.</p>
+    <p>1. Na primeira pagina você terá 3 opções, "Jogar", "Sobre" e "Contato".</p>
+    <ul>
+      <li> "Jogar" para entrar em contato com a nossa IA, dentro desta pagina basta você clicar no botão "Run".</li>
+      <li> "Sobre" para ver o manual de como o site funciona caso esteja perdido. </li>
+      <li> "Contato" para saber informações adicionais da nossa equipe.</li>
+    </ul>
+    <p>2. Menu lateral </p>
+    <ul> 
+      <li> No canto superior direito você tem a opção do nosso menu lateral para poder navegar no nosso site.</li>
+      <li> Onde "Home" voltará para a pagina inicial do site. </li>
+      <li> "Quem Somos" é a pagina de contato com a equipe.</li>
+      <li> "Sobre" e a pagina para tirar dúvidas relacionado ao site.</li>
+    </ul>
 
     <div class="footer">
       made with ❤️ by gabe.
