--- a/home.html
+++ b/home.html
@@ -97,7 +97,7 @@
     <div id="sidebar" class="sidebar" style="display:none;">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li>Quem somos?</li>
+        <li><a href="contato.html">Contato</a></li>
         <li><a href="Sobre.html">Sobre</a></li>
       </ul>
     </div>
