--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="container">
     <a href="home.html" class="menu-item">Jogar</a>
     <a href="Sobre.html" class="menu-item">Sobre</a>
-    <a href="#" class="menu-item">Contato </a>
+    <a href="contato.html" class="menu-item">Contato </a>
   </div>
   <div id="notification" class="notification">
     <h1>Olá, seja muito bem vindo.</h1>
