--- a/contato.html
+++ b/contato.html
@@ -138,7 +138,7 @@
       </ul>
     </div>
     <h1>Contato</h1>
-    <p>Para entrar em contato conosco, envie um e-mail para: <a href="mailto:contato@mindreader.com">MingReader@gmail.com</a></p>
+    <p>Para entrar em contato conosco, envie um e-mail para: <a href="mailto:contato@mindreader.com">MindReader@gmail.com</a></p>
     <p>Contato alternativo no servidor do Discord: <a href="https://discord.gg/8CsjFjHC" target="_blank">https://discord.gg/8CsjFjHC</a></p>
 
     <div class="footer">
