--- a/contato.html
+++ b/contato.html
@@ -134,7 +134,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="contato.html">Contato</a></li>
-        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="Sobre.html">Sobre</a></li>
       </ul>
     </div>
     <h1>Contato</h1>
