--- a/Sobre.html
+++ b/Sobre.html
@@ -139,7 +139,7 @@
     </ul>
     <p>2. Menu lateral </p>
     <ul> 
-      <li> No canto superior direito você tem a opção do nosso menu lateral para poder navegar no nosso site.</li>
+      <li> No canto superior esquerdo você tem a opção do nosso menu lateral para poder navegar no nosso site.</li>
       <li> Onde "Home" voltará para a pagina inicial do site. </li>
       <li> "Quem Somos" é a pagina de contato com a equipe.</li>
       <li> "Sobre" e a pagina para tirar dúvidas relacionado ao site.</li>
