--- a/Sobre.html
+++ b/Sobre.html
@@ -26,12 +26,20 @@
     h1 {
       font-size: 28px;
       color: #ffffff;
+      margin: 20px 0;
     }
     p {
       font-size: 16px;
       color: #ffffff;
       max-width: 600px;
-      text-align: center;
+      text-align: justify;
+      margin: 5px 0;
+    }
+    ul {
+      margin: 5px 0;
+    }
+    li {
+      margin: 5px 0;
     }
     .footer {
       position: absolute;
@@ -47,6 +55,7 @@
       font-size: 13px;
       color: #06AA48;
     }
+    /* ... estilos do menu lateral ... */
     .hamburger-icon {
       position: absolute;
       top: 15px;
@@ -106,6 +115,7 @@
       color: #ffffff; /* Adicionando a cor branca aos itens dentro da tag <ul> */
     }
   </style>
+  <!-- ... script para alternar a exibição do menu lateral ... -->
   <script>
     function toggleSidebar() {
       var sidebar = document.getElementById('sidebar');
@@ -120,6 +130,7 @@
 </head>
 <body>
   <div class="container">
+    <!-- ... menu lateral ... -->
     <div class="hamburger-icon" onclick="toggleSidebar()">&#9776;</div>
     <div id="sidebar" class="sidebar" style="display:none;">
       <ul>
@@ -129,20 +140,22 @@
       </ul>
     </div>
     <h1>Sobre o MindReader</h1>
-    <p>Estamos orgulhosos de apresentar o MindReader, um projeto desenvolvido por alunos da Univille. A inteligência artificial é capaz de adivinhar qual é o seu time de futebol brasileiro favorito. O objetivo deste projeto é demonstrar o poder e as possibilidades da inteligência artificial e do aprendizado de máquina aplicados ao mundo do esporte e entretenimento, nele nós colocamos características dos times como cores, mascotes, estádios, jogares e titulos para que o jogador possa responder as respostas com sim ou não</p>
+    <p>Estamos orgulhosos de apresentar o MindReader, um projeto desenvolvido por alunos da Univille. A inteligência artificial é capaz de adivinhar qual é o seu time de futebol brasileiro favorito. O objetivo deste projeto é demonstrar o poder e as possibilidades da inteligência artificial e do aprendizado de máquina aplicados ao mundo do esporte e entretenimento, nele nós colocamos características dos times como cores, mascotes, estádios, jogares e titulos para que o jogador possa responder as respostas com sim ou não.</p>
+    
     <h1>Como utilizar ?</h1>
-    <p>1. Na primeira pagina você terá 3 opções, "Jogar", "Sobre" e "Contato".</p>
+    <p>Na primeira página, você terá 3 opções: "Jogar", "Sobre" e "Contato".</p>
     <ul>
-      <li> "Jogar" para entrar em contato com a nossa IA, dentro desta pagina basta você clicar no botão "Run".</li>
-      <li> "Sobre" para ver o manual de como o site funciona caso esteja perdido. </li>
-      <li> "Contato" para saber informações adicionais da nossa equipe.</li>
+      <li><strong>Jogar:</strong> Para entrar em contato com a nossa IA, dentro desta página, basta clicar no botão "Run".</li>
+      <li><strong>Sobre:</strong> Para ver o manual de como o site funciona caso esteja perdido.</li>
+      <li><strong>Contato:</strong> Para saber informações adicionais da nossa equipe.</li>
     </ul>
-    <p>2. Menu lateral </p>
-    <ul> 
-      <li> No canto superior esquerdo você tem a opção do nosso menu lateral para poder navegar no nosso site.</li>
-      <li> "Home" voltará para a pagina inicial do site. </li>
-      <li> "Contato" é a pagina de contato com a equipe.</li>
-      <li> "Sobre" e a pagina para tirar dúvidas relacionado ao site.</li>
+    
+    <p>Menu lateral:</p>
+    <ul>
+      <li>No canto superior esquerdo, temos a opção do nosso menu lateral para poder navegar pelo site.</li>
+      <li><strong>Home:</strong> Voltará para a página inicial do site.</li>
+      <li><strong>Contato:</strong> É a página de contato com a equipe.</li>
+      <li><strong>Sobre:</strong> É a página para tirar dúvidas relacionadas ao site.</li>
     </ul>
 
     <div class="footer">
