--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h1>Olá, seja muito bem vindo.</h1>
     <p> Eu sou o MindReader, uma inteligência artificial que foi desenvolvida por alunos da Univille.</p>
     <p> O meu dever no momento é pensar no time de futebol brasileiro que você torce, ou esteja pensando.</p>
-    <p> Se tiver alguma dúvida clique em "Sobre", esta pagina ficará destinada para auxiliar em tudo que precisa para conseguir aproveitar ao máximo do nosso projeto.</p>
+    <p> Se tiver alguma dúvida clique em "Sobre", esta página ficará destinada para auxiliar em tudo que precisa para conseguir aproveitar ao máximo do nosso projeto.</p>
     <button class="close-button" onclick="closeNotification()">Ok</button>
   </div>
   <div class="footer">
