--- a/contato.html
+++ b/contato.html
@@ -140,7 +140,7 @@
       </ul>
     </div>
     <h1>Contato</h1>
-    <p>Para entrar em contato conosco, envie um e-mail para: <a href="mailto:MindReader@gmail.com">Contato</a></p>
+    <p>Nos envie um <a href="mailto:MindReader@gmail.com">E-mail</a></p>
     <p>Contato alternativo no servidor do <a href="https://discord.gg/8CsjFjHC" target="_blank">Discord</a></p>
 
     <div class="footer">
