--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
     }
     .sidebar {
       position: absolute;
-      top: 60px; /* Mudança da posição do menu lateral */
+      top: 60px;
       left: 30px;
-      width: 180px; /* Largura reduzida do menu lateral */
+      width: 180px;
       background-color: #1C2333;
       transition: all 0.3s ease;
       padding: 15px;
@@ -56,11 +56,11 @@
       margin: 0;
     }
     .sidebar ul li {
-      font-size: 16px; /* Reduzindo o tamanho da fonte */
+      font-size: 16px;
       font-weight: 500;
       color: white;
-      padding: 10px 15px; /* Reduzindo o padding */
-      margin: 5px 0; /* Reduzindo a margem */
+      padding: 10px 15px;
+      margin: 5px 0;
       transition: background-color 0.3s ease, color 0.3s ease;
       border-radius: 10px;
       background-color: rgba(255, 255, 255, 0.1);
@@ -101,8 +101,6 @@
         <li><a href="Sobre.html">Sobre</a></li>
       </ul>
     </div>
-
-    <!-- Restante do conteúdo da página -->
     <iframe src="https://replit.com/@gabrielantunesb/teste3?embed=true&hideExplorer=true" frameborder="0" style="max-width: 100%; max-height: 90%; width: 650px; height: 600px; border-radius: 15px;"></iframe>
     <div class="footer" style="position: absolute; bottom: 10px; left: 10px; font-size: 13px; color: white;">made with ❤️ by gabe.</div>
     <div class="copyright" style="position: absolute; bottom: 10px; right: 10px; font-size: 13px; color: #06AA48;">© 2023 Joinville BRA, Inc All rights reserved</div>
