--- a/home.html
+++ b/home.html
@@ -212,8 +212,8 @@
         <li><a href="Sobre.html">Sobre</a></li>
       </ul>
     </div>
-    <iframe src="https://replit.com/@gabrielantunesb/MindReader?embed=true&hideExplorer=true" frameborder="0" style="max-width: 100%; max-height: 90%; width: 650px; height: 600px; border-radius: 15px;"></iframe>
-    <div class="footer" style="position: absolute; bottom: 10px; left: 10px; font-size: 13px; color: white;">made with ❤️ by gabe2.</div>
+    <iframe src="https://replit.com/@gabrielantunesb/MindReader?embed=false&hideExplorer=true" frameborder="0" style="max-width: 100%; max-height: 90%; width: 650px; height: 600px; border-radius: 15px;"></iframe>
+    <div class="footer" style="position: absolute; bottom: 10px; left: 10px; font-size: 13px; color: white;">made with ❤️ by gabe3.</div>
     <div class="copyright" style="position: absolute; bottom: 10px; right: 10px; font-size: 13px; color: #06AA48;">© 2023 Joinville BRA, Inc All rights reserved</div>
   </div>
 </body>
